test/parser/cases/invalid/small/missing_do_semicolon.cp
main()
{
    do {
        return;
    } while(value < 1)
}
